# bookify_rs

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: bookify.mdc
.github/workflows/: release.yml
src/: args.rs  calc.rs  error.rs  imposition.rs  lib.rs  main.rs
tests/: integration_test.rs
